--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,9 +7,9 @@
 
 <body>
   <main>
-    <div class="acrylic shadow">
+    <div class="nk-acrylic cards">
         Acrylic material! <br>
-      <div class="acrylic">
+      <div class="nk-acrylic cards">
         Nested Acrylic material!
       </div>
     </div>
