--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,17 +1,17 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="../src/acrylic.css">
+  <meta charset="UTF-8"> 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="../dist/acrylic.min.css">
   <link rel="stylesheet" href="./demo.css">
 </head>
 
 <body>
-  <main>
+  <main class="container-fluid">
     <div class="nk-acrylic cards">
-        Acrylic material! <br>
-      <div class="nk-acrylic cards">
-        Nested Acrylic material!
-      </div>
+        <br/><br/><br/>
+        Acrylic material!
     </div>
   </main>
 </body>
