--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-  <meta charset="UTF-8"> 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="../dist/acrylic.min.css">
   <link rel="stylesheet" href="./demo.css">
 </head>
@@ -10,10 +11,48 @@
 <body>
   <main class="container-fluid">
     <div class="nk-acrylic cards">
-        <br/><br/><br/>
-        Acrylic material!
+      <br/><br/><br/> Acrylic material!
+      <br/><br/> Enter new image url here
+      <input id="img-input" type="text" value="">
+      <br/><br/>
+      <button type="submit" onclick="changebg()">Change background</button>
     </div>
   </main>
 </body>
+
+<style>
+  body {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+  }
+
+  .cards {
+    height: 70vh;
+    margin-top: 15vh;
+    width: 60vw;
+    margin-left: 20vw;
+  }
+</style>
+
+<script>
+  function changebg() {
+    document.styleSheets[document.styleSheets.length - 1].deleteRule(window.nkRuleIndex);
+    let newurl = document.getElementById("img-input").value;
+    let elements = document.getElementsByTagName("body");
+    for (let i = 0; i < elements.length; i++) {
+      elements[i].style.backgroundImage = "url(" + newurl + ")";
+    }
+
+    let el = document.getElementsByClassName("nk-acrylic");
+    for (let i = 0; i < el.length; i++) {
+      el[i].classList.remove('nk-new-acrylic');
+      el[i].classList.add('nk-new-acrylic');
+    }
+
+    window.nkRuleIndex = document.styleSheets[document.styleSheets.length - 1].insertRule('.nk-new-acrylic:before{background-image:url("' + newurl + '");}', 0);
+  }
+
+</script>
 
 </html>
