--- a/demo/demo.html
+++ b/demo/demo.html
@@ -20,39 +20,5 @@
   </main>
 </body>
 
-<style>
-  body {
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-  }
-
-  .cards {
-    height: 70vh;
-    margin-top: 15vh;
-    width: 60vw;
-    margin-left: 20vw;
-  }
-</style>
-
-<script>
-  function changebg() {
-    document.styleSheets[document.styleSheets.length - 1].deleteRule(window.nkRuleIndex);
-    let newurl = document.getElementById("img-input").value;
-    let elements = document.getElementsByTagName("body");
-    for (let i = 0; i < elements.length; i++) {
-      elements[i].style.backgroundImage = "url(" + newurl + ")";
-    }
-
-    let el = document.getElementsByClassName("nk-acrylic");
-    for (let i = 0; i < el.length; i++) {
-      el[i].classList.remove('nk-new-acrylic');
-      el[i].classList.add('nk-new-acrylic');
-    }
-
-    window.nkRuleIndex = document.styleSheets[document.styleSheets.length - 1].insertRule('.nk-new-acrylic:before{background-image:url("' + newurl + '");}', 0);
-  }
-
-</script>
-
+<script src="./demo.js"></script>
 </html>
