--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,23 +2,29 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="../dist/acrylic.min.css">
-  <link rel="stylesheet" href="./demo.css">
 </head>
 
 <body>
-  <main class="container-fluid">
-    <div class="nk-acrylic cards">
-      <br/><br/><br/> Acrylic material!
-      <br/><br/> Enter new image url here
+  <main class="container-fluid mt-4">
+    <div class="nk-acrylic acrylic-cards text-center font-weight-bold">
+      <br /><br /><br />
+      <h4 style="color:black;">Acrylic material!</h4>
+      <br /><br /> You can refresh this page to see a new background image loaded everytime from <a
+        href="https://unsplash.com/">Unsplash</a>.
+      <br /><br /> You can also enter a image URL manually.
+      <br /><br /> Enter new image url here
       <input id="img-input" type="text" value="">
-      <br/><br/>
-      <button type="submit" onclick="changebg()">Change background</button>
+      <button class="btn btn-primary" onclick="changebg()">Change background</button>
+      <br /><br />
+      <button class="btn btn-primary" onclick="location.reload()">Reload image</button>
+      <br /><br />
     </div>
   </main>
 </body>
 
 <script src="./demo.js"></script>
+
 </html>
