updating bg image
Signed-off-by: Kolappan N <8157105+kolappannathan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="nk-acrylic acrylic-cards text-center fw-bold">
         <br /><br /><br />
         <h1 style="color:black;">Acrylic CSS Demo</h1>
-        <br /><br /> You can refresh this page to see a new background image loaded everytime from <a
-          href="https://unsplash.com/">Unsplash</a> using <a href="https://source.unsplash.com/">Unsplash Source</a>.
+        <br /><br /> Photo by <a href="https://unsplash.com/@v2osk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">v2osk</a>
+        on <a href="https://unsplash.com/photos/foggy-mountain-summit-1Z2niiBPg5A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
         <br /><br /> You can also enter a image URL manually.
         <br /><br /> Enter new image url here
         <input id="img-input" type="text" value="">
