--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/acrylic.min.css">
+    <title>Acrylic CSS demo</title>
   </head>
 
   <body>
@@ -12,6 +13,7 @@
       <div class="nk-acrylic acrylic-cards text-center fw-bold">
         <br /><br /><br />
         <h1 style="color:black;">Acrylic CSS Demo</h1>
+        <br /><br /> Note: This package is no longer maintained and deprecated. For more info: https://github.com/kolappannathan/acrylic-css/
         <br /><br /> Photo by <a href="https://unsplash.com/@v2osk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">v2osk</a>
         on <a href="https://unsplash.com/photos/foggy-mountain-summit-1Z2niiBPg5A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.
         <br /><br /> You can also enter a image URL manually.
